--- a/student_talk_series/reminders/Drug_the_Underugged_reminder.html
+++ b/student_talk_series/reminders/Drug_the_Underugged_reminder.html
@@ -4,7 +4,7 @@
       <h2>Organized by: <span>Valence Club</span>, IISER Kolkata</h2>
     </div>
     <div class="content">
-      <h2>📅 Just Two Days Away!</h2>
+      <h2>📅 It's Tomorrow!!!</h2>
       <p>We’re excited to remind you that our talk, <strong>"The Tale of Nucleophilic Sulfur: Drugging the Undruggable in Chromatin Dynamics"</strong>, is coming up this Wednesday! Don’t miss this chance to explore groundbreaking insights into drug discovery and gene regulation with us.</p>
       <p>Join us to learn about how small molecules and nucleophilic sulfur can tackle the seemingly "undruggable" targets in bio-chemistry, transforming cancer therapeutics and much more.</p>
   
